fix: remove click on stairs and toilets, text wrap

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -94,15 +94,25 @@
   margin: 20px 0;
 }
 
-.room {
+.clickable {
   cursor: pointer;
   transition: fill 0.3s ease;
 }
-.room:hover rect {
+.clickable:hover rect {
   fill: #bbbbbb;
 }
-.room.selected rect {
+.clickable.selected rect {
   fill: #dfaaaa;
+}
+
+.room-name {
+  font-size: 10px;
+  text-align: center;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  -webkit-hyphens: auto;
+          hyphens: auto;
+  color: #000;
 }
 
 .chatbot-container {
